--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,28 @@
+# Mac OS specific
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Thumbnails
+._*
+
+# Eclipse specific
+.classpath
+.project
+.settings/
+
+# Gradle specific
+.gradle/
+
+# Generated
+bin/
+build/
+test-output/
 *.class
 *.log
 
 # sbt specific
-.cache
+.cache*
 .history
 .lib/
 dist/*
@@ -15,3 +35,6 @@ project/plugins/project/
 # Scala-IDE specific
 .scala_dependencies
 .worksheet
+/bin/
+
+
